--- a/02-servicios-backend/billing-service/config/config.yaml
+++ b/02-servicios-backend/billing-service/config/config.yaml
@@ -1,4 +1,4 @@
 database:
   type: PSQL
-  #connection: host=<some-host> port=<some-port> user=<some-user> password=<hmmm> dbname=<initial-db> sslmode=disable
+  # connection: host=127.0.0.1 port=5432 user=postgres password=postgres dbname=lab sslmode=disable
   connection: "" # empty
