--- a/k8s/liberacion.yaml
+++ b/k8s/liberacion.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name:  frontend
+  name: frontend
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -31,7 +31,7 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - name: grpc
-              containerPort: 5001
+              containerPort: 5000
               protocol: TCP
 ---
 apiVersion: v1
@@ -46,8 +46,8 @@ spec:
   ports:
     - name: grpc
       protocol: TCP
-      port: 5001
-      targetPort: 5001
+      port: 5000
+      targetPort: 5000
   selector:
     tipo: microservicio
     app: custody-service-backend
@@ -194,9 +194,9 @@ metadata:
     app: frontend-api
   annotations:
     nginx.ingress.kubernetes.io/proxy-body-size: 40mb
-    nginx.ingress.kubernetes.io/proxy-read-timeout: '300'
-    nginx.ingress.kubernetes.io/proxy-send-timeout: '300'
-    nginx.ingress.kubernetes.io/use-regex: 'true'
+    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
+    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
 spec:
   ingressClassName: nginx
